# simple-cpp-libls-analog

./: .gitignore  CMakeLists.txt  README.md  index.html  runs.cpp  second.html
async_socket/: CMakeLists.txt
async_socket/include/: Common.h  Coroutine.h  Error.h  Event.h  Hub.h  Selector.h  Sokcet.h  SslSocket.cpp  SslSocket.h  Time.h
async_socket/src/: Coroutine.cpp  Error.cpp  Event.cpp  Hub.cpp  Selector.cpp  Sokcet.cpp  Time.cpp  main.cpp
dns-resolver/: CMakeLists.txt
dns-resolver/fixtures/: IPAddress.cpp  IPAddress.h
dns-resolver/src/: Answer.cpp  Answer.h  Cache.cpp  Cache.h  Constants.h  Query.cpp  Query.h  Response.cpp  Response.h  mDNSResolver.cpp  mDNSResolver.h
dns-server/: CMakeLists.txt
dns-server/include/dns/: buffer.h  data.h  error.h  lookup.h  recursive_lookup.h  resolver.h  responder.h  static_lookup.h  udp.h
dns-server/src/: data.cpp  static_lookup.cpp
http/: CMakeLists.txt
http/include/http/: Cookies.h  Error.h  Parse.h  Request.h  Uri.h  common.h  http.h
http/src/: http.cpp
socket/: Socket.h
tcp/client/: CMakeLists.txt  client.cpp  client_asio.cpp
tcp/server/: CMakeLists.txt  server.cpp
tcp/src/: CMakeLists.txt  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
udp/: UDP.h
variant/: CMakeLists.txt  main.cpp  readme.md  variant.h
