cmake_minimum_required(VERSION 3.23)

project(cor_socket)

FIND_PACKAGE(OpenSSL REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FILE(GLOB HEADER ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)


ADD_LIBRARY(cor_socket  ${HEADER} ${SOURCE})

TARGET_LINK_LIBRARIES(cor_socket
        PRIVATE
        OpenSSL::SSL
        ${CMAKE_THREAD_LIBS_INIT})

TARGET_COMPILE_OPTIONS(cor_socket PRIVATE
        -Wall -Wextra -pedantic -Werror
)
